<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.authentication.view.activity.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/txt_sign_up"
            app:titleTextColor="@color/colorLight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView android:layout_width="0dp" android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_sign_up">

        <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_gravity="center_horizontal"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/txt_profile_image"
                    android:id="@+id/imageView"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:hint="@string/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldName">

                <com.google.android.material.textfield.TextInputEditText
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:hint="@string/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldUsername">

                <com.google.android.material.textfield.TextInputEditText
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:hint="@string/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldEmail">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorTextDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:hint="@string/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleContentDescription="Password visibility"
                    app:passwordToggleDrawable="@drawable/password_visibility"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldPassword">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/colorTextDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:hint="@string/txt_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleContentDescription="Password visibility"
                    app:passwordToggleDrawable="@drawable/password_visibility"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/fieldPasswordConfirmation">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/colorTextDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUpConfirm"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLight"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_confirm"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>