<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.authentication.view.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:id="@+id/linearLayout" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/view" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView android:layout_width="wrap_content"
                       android:layout_gravity="center" android:layout_height="200dp" android:src="@drawable/logo_red"
                       android:tint="@color/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_email">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorTextDark"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleContentDescription="Password visibility"
                    app:passwordToggleDrawable="@drawable/password_visibility"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorTextDark"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_password">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/colorTextDark"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorLight"
                    android:text="@string/txt_login"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"/>

        </LinearLayout>

        <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:id="@+id/view"/>

        <TextView
                android:textStyle="bold"
                android:textSize="15sp"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:id="@+id/buttonSignUp"
                android:text="@string/txt_click_here_to_sign_up"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>